# PdfReader

./: CMakeLists.txt  DocumentObserver.cpp  DocumentObserver.h  MainWindow.cpp  MainWindow.h  PageViewer.cpp  PageViewer.h  PdfPage.cpp  PdfPage.h  README.MD  main.cpp
